--- a/ConverterUI/ConverterUbuntu.ui
+++ b/ConverterUI/ConverterUbuntu.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>378</width>
-    <height>119</height>
+    <width>382</width>
+    <height>104</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,7 +34,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>50</y>
+     <y>70</y>
      <width>161</width>
      <height>25</height>
     </rect>
@@ -46,8 +46,8 @@
   <widget class="QCheckBox" name="sameBox">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>50</y>
+     <x>10</x>
+     <y>40</y>
      <width>111</width>
      <height>23</height>
     </rect>
@@ -92,9 +92,9 @@
   <widget class="QLineEdit" name="name_lineEdit">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>10</y>
-     <width>113</width>
+     <x>180</x>
+     <y>40</y>
+     <width>191</width>
      <height>25</height>
     </rect>
    </property>
@@ -105,9 +105,9 @@
   <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>80</y>
-     <width>161</width>
+     <x>180</x>
+     <y>70</y>
+     <width>191</width>
      <height>25</height>
     </rect>
    </property>
@@ -116,6 +116,19 @@
    </property>
    <property name="currentIndex">
     <number>-1</number>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="remButton">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>10</y>
+     <width>101</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Запомнить</string>
    </property>
   </widget>
  </widget>
